[docker-compose.yml]:   Adding 'env_file' to specify the environment variables.
[.env]:
  Changinng variables to satisfy both backend and db services.

[backend/routes.js]:
  Creating a query to check if the user exists, to avoid insertion
  of the same value at runtime.

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,10 @@
   "main": "app.js",
   "author": "Marcel Fox",
   "license": "MIT",
+  "scripts": {
+    "dev": "npx sequelize-cli db:migrate && nodemon server.js",
+    "start": "node server.js"
+  },
   "devDependencies": {
     "nodemon": "^2.0.1"
   },
