--- a/backend/package.json
+++ b/backend/package.json
@@ -5,17 +5,30 @@
   "author": "Marcel Fox",
   "license": "MIT",
   "scripts": {
-    "dev": "npx sequelize-cli db:migrate && nodemon server.js",
-    "start": "node server.js"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.1"
+    "start": "node src/server.js",
+    "predev": "sequelize db:migrate",
+    "dev": "nodemon src/server.js --ignore __tests__",
+    "pretest": "NODE_ENV=test sequelize db:migrate",
+    "test": "NODE_ENV=test jest",
+    "posttest": "NODE_ENV=test sequelize db:migrate:undo:all"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "pg": "^7.14.0",
-    "sequelize": "^5.21.2",
-    "sequelize-cli": "^5.5.1"
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "factory-girl": "^5.0.4",
+    "faker": "^4.1.0",
+    "fetch": "^1.1.0",
+    "jsonwebtoken": "^8.5.0",
+    "node-fetch": "^2.6.0",
+    "pg": "^7.8.0",
+    "sequelize": "^4.44.3"
+  },
+  "devDependencies": {
+    "jest": "^24.1.0",
+    "nodemon": "^1.18.10",
+    "sequelize-cli": "^5.5.1",
+    "sqlite3": "^4.0.6",
+    "supertest": "^3.4.2"
   }
 }
