--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes: 
       - ./backend:/usr/src/app
     working_dir: /usr/src/app
-    env_file: .env
+    # env_file: .env
     command: npm install
     command: npm run dev
     
@@ -26,6 +26,6 @@ services:
 
   db:
     image: postgres:latest
-    env_file: .env
+    env_file: ./backend/.env
     ports:
       - 5432:5432
