--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "factory-girl": "^5.0.4",
     "faker": "^4.1.0",
     "fetch": "^1.1.0",
     "jsonwebtoken": "^8.5.0",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "pg": "^7.8.0",
     "sequelize": "^4.44.3"
