--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,14 +15,18 @@ services:
     ports:
       - 3000:3000
 
-  # frontend:
-  #   image: node:12-alpine
-  #   build: ./frontend
-  #   volumes:
-  #     - ./frontend:/usr/src/app
-  #     working_dir: /usr/src/app
-  #   ports:
-  #     - 8080:80
+  frontend:
+    image: node:12-alpine
+    depends_on: 
+      - db
+    build: ./frontend
+    volumes:
+      - ./frontend:/usr/src/app
+    working_dir: /usr/src/app
+    command: yarn install
+    command: yarn start
+    ports:
+      - 8080:8080
 
   db:
     image: postgres:latest
