adjusting env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,16 @@
+#APP:
+APP_SECRET=startrek
+
+# POSTGRES_CONTAINER:
+POSTGRES_DB=jschedule_db
+POSTGRES_USER=jschedule_user
+POSTGRES_PASSWORD=jschedule_pass
+
 # DATABASE:
-PG_DB=jschedule_db
-PG_HOST=localhost
-PG_USER=jschedule_user
-PG_PASS=jschedule_pass
+DB_NAME=jschedule_db
+DB_HOST=db
+DB_USER=jschedule_user
+DB_PASS=jschedule_pass
+
+# TIMEZONE:
+TZ='America/Recife'
