--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.0.4"
   },
   "scripts": {
+    "prestart": "npm install",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
